--- a/template/project-settings.json
+++ b/template/project-settings.json
@@ -2,10 +2,7 @@
   "name": "New Project",
   "bundles": [
     {
-      "name": "assets",
-      "directories": [
-        "assets/"
-      ]
+      "name": "assets"
     }
   ],
   "buildSettings": []
