Store a single directory per asset bundle, Add asset bundle scheme specification

--- a/template/project-settings.json
+++ b/template/project-settings.json
@@ -2,7 +2,9 @@
   "name": "New Project",
   "bundles": [
     {
-      "name": "assets"
+      "name": "Assets",
+      "scheme": "assets",
+      "directory": "assets/"
     }
   ],
   "buildSettings": []
