Remove trailing slash from template sttings asset directory, Use copy of entity scene in offscreen renderer, Disable exception handlers when XEDITOR_DEBUGGING is defined, Set resource importer in default registry, Replace path usages with string

--- a/template/project-settings.json
+++ b/template/project-settings.json
@@ -4,7 +4,7 @@
     {
       "name": "Assets",
       "scheme": "assets",
-      "directory": "assets/"
+      "directory": "assets"
     }
   ],
   "buildSettings": []
