Add members in build settings, Add build methods to BuildSettings, Compile plugin in project cmake lists

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -3,11 +3,27 @@ cmake_minimum_required(VERSION 3.0.0)
 project(NewProject)
 
 # These variables are set by the editor application when building the project
-set(EXE_NAME game) # The name of the target
-set(SRC_DIR template/source/ template/plugin/) # Source directory
-set(INC_DIR template/source/ template/plugin/) # Include directory
-set(LNK_DIR) # Link directory
-set(LINK xengine) # Link libraries
+if (NOT DEFINED EXE_NAME)
+    set(EXE_NAME game) # The name of the target
+endif ()
+if (NOT DEFINED PLUGIN_NAME)
+    set(PLUGIN_NAME game_plugin) # The name of the plugin target
+endif ()
+if (NOT DEFINED SRC_DIR)
+    set(SRC_DIR source/) # Source directories
+endif ()
+if (NOT DEFINED INC_DIR)
+    set(INC_DIR source/) # Include directories
+endif ()
+if (NOT DEFINED PLUGIN_DIR)
+    set(PLUGIN_DIR plugin/) # Plugin directories
+endif ()
+if (NOT DEFINED LNK_DIR)
+    set(LNK_DIR) # Link directories
+endif ()
+if (NOT DEFINED LINK)
+    set(LINK xengine) # Link libraries
+endif ()
 
 file(GLOB_RECURSE SRC ${SRC_DIR}*.c ${SRC_DIR}*.cpp)
 
@@ -20,3 +36,7 @@ add_executable(${EXE_NAME} ${SRC})
 target_include_directories(${EXE_NAME} PUBLIC ${INC_DIR})
 target_link_directories(${EXE_NAME} PUBLIC ${LNK_DIR})
 target_link_libraries(${EXE_NAME} ${LINK})
+
+file(GLOB_RECURSE PLUGIN_SRC ${PLUGIN_DIR}*.c ${PLUGIN_DIR}*.cpp)
+
+add_library(${PLUGIN_NAME} ${PLUGIN_SRC})
