Implement project build dialog, Set spin box ranges, Implement plugin interface

--- a/template/CMakeLists.txt
+++ b/template/CMakeLists.txt
@@ -15,9 +15,6 @@ endif ()
 if (NOT DEFINED INC_DIR)
     set(INC_DIR source/) # Include directories
 endif ()
-if (NOT DEFINED PLUGIN_DIR)
-    set(PLUGIN_DIR plugin/) # Plugin directories
-endif ()
 if (NOT DEFINED LNK_DIR)
     set(LNK_DIR) # Link directories
 endif ()
@@ -29,6 +26,16 @@ file(GLOB_RECURSE SRC ${SRC_DIR}*.c ${SRC_DIR}*.cpp)
 
 if (WIN32)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
+elseif (UNIX)
+    set(CMAKE_EXE_LINKER_FLAGS -rdynamic)
+endif ()
+
+if (UNIX)
+    add_compile_definitions(EXPORT=__attribute__\(\(visibility\("default"\)\)\))
+elseif (WIN32)
+    add_compile_definitions(EXPORT=__declspec\(dllexport\))
+else ()
+    add_compile_definitions(EXPORT=)
 endif ()
 
 add_executable(${EXE_NAME} ${SRC})
@@ -37,6 +44,9 @@ target_include_directories(${EXE_NAME} PUBLIC ${INC_DIR})
 target_link_directories(${EXE_NAME} PUBLIC ${LNK_DIR})
 target_link_libraries(${EXE_NAME} ${LINK})
 
-file(GLOB_RECURSE PLUGIN_SRC ${PLUGIN_DIR}*.c ${PLUGIN_DIR}*.cpp)
+file(GLOB_RECURSE PLUGIN_SRC plugin/*.c plugin/*.cpp)
 
-add_library(${PLUGIN_NAME} ${PLUGIN_SRC})
+add_library(${PLUGIN_NAME} SHARED ${PLUGIN_SRC})
+target_include_directories(${PLUGIN_NAME} PUBLIC ${INC_DIR})
+target_link_directories(${PLUGIN_NAME} PUBLIC ${LNK_DIR})
+target_link_libraries(${PLUGIN_NAME} ${LINK})
